<resources>
    <string name="app_name">Tricky</string>
    <string name="hey_i_m_tricky">Hey, I’m Tricky!</string>
    <string name="i_know_you_ve_got_many_things_to_do_but_i_m_here_to_help_you_organize">I know you’ve got many things to do but I’m here to help you organize</string>
    <string name="get_started">Get started</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="stuff_to_do">Stuff to do?</string>
    <string name="type_your_task_here">Type your task here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>


    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">Th</string>
    <string name="Friday">F</string>
    <string name="Saturday">St</string>
    <string name="Sunday">Sn</string>

    <string name="boring_cat_text">Add some tasks, don\'t make me bored</string>
    <string name="new_task">New task</string>
    <string name="tod">TODO</string>
    <string name="todo_cat">TODO</string>
    <string name="to_do">To do</string>
    <string name="sort_by">Sort by</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="Strikethrough">1. <strike>Strikethrough</strike> Using strike</string>
    <string name="transitionName">shared_char_main_page</string>
    <string name="completed">Completed</string>
    <string name="some_kind_of_text">Some kind of text</string>
</resources>