<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tralivali"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/TV_head_onBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/hey_i_m_tricky"
        android:textColor="#1e212b"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_can_in_box" />

    <TextView
        android:id="@+id/onBoarding_btn1"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/screen_black"
        app:layout_constraintBottom_toBottomOf="@+id/onBoarding_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_body_onBoarding" />


    <ImageView
        android:id="@+id/IV_can_in_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_in_box"
        />

    <TextView
        android:id="@+id/TV_body_onBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="12sp"
        android:text="@string/i_know_you_ve_got_many_things_to_do_but_i_m_here_to_help_you_organize"
        android:textColor="#1e212b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_head_onBoarding" />


    <Button
        android:id="@+id/onBoarding_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/disabled_save_button"
        android:drawablePadding="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_body_onBoarding" />


</androidx.constraintlayout.widget.ConstraintLayout>